impl(backend): use OperateTester as test rule
- Clean up warnings
- Remove duplicate elasticsearch index refreshes

Related with OPE-691